--- a/frontend/public/style.scss
+++ b/frontend/public/style.scss
@@ -56,6 +56,7 @@
 @import "components/resource-dropdown";
 @import "components/row-filter";
 @import "components/route";
+@import "components/secret";
 @import "components/service";
 @import "components/sysevent-icon";
 @import "components/sysevent-stream";
