--- a/frontend/public/components/_secret.scss
+++ b/frontend/public/components/_secret.scss
@@ -17,6 +17,7 @@
   background: white;
   cursor: inherit;
   display: block;
+  z-index: 1000;
 }
 
 .form-textarea {
@@ -26,4 +27,26 @@
 
 .create-secret-form .help-block {
   margin-bottom: 10px;
+}
+
+.file-input {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  padding: 2.5em 0;
+  background: rgba(0,0,0,0.5);
+  z-index: 1001;
+}
+
+.drop-text {
+  color: #fff;
+  font-size: 20px;
+  font-weight: bolder;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%);
 }
